--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
        uses: peter-evans/repository-dispatch@v1
        with:
          token: ${{ secrets.GH_PAT }}
-         repository: {Github 계정명}/{레포지토리명}
+         repository: ysk1007/PROGRAMMERS-BADGE
          event-type: trigger-workflow
